2000-10-27 18:05 GMT+2 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/mysql/tmysql.prg
   * contrib/mysql/tsqlbrw.prg
     * changes / fixes.

2000-10-27 08:50 UTC+0800 Ron Pinkas <ron@profit-master.com>

    * source/compiler/genc.c
    * source/compiler/genhrb.c
    * source/compiler/genjava.c
    * source/compiler/genobj32.c
    * source/compiler/harbour.c
    * source/compiler/harbour.l
    * source/compiler/harbour.slx
    * source/compiler/harbour.sly
    * source/compiler/harbour.y
      - Removed License Exception from core compiler files that are not part of HVM or HRL

    /* Dave, could you please verify this is correct. */

2000-10-27 10:40 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbrddcdx.h
        *some comments added

    *source/rdd/dbfcdx/dbfcdx1.c
        * result of macro evaluation (hb_macroRun()) has to be popped
        from the stack
        * added some comments

2000-10-26 22:10 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *Changelog
      renamed to ChangeLog.009 and started an new one
   *doc/genhtm.rsp
       +Tbrowse.txt added
   +doc/en/tbrowse.txt
        *Document for tbrowse class. please  note this is still in progress
   *source/rtl/tbrowse.prg
        +Clipper 5.3 applykey() and setkey() methods added
   *test/testbrw.prg
        *Small changes to allow the use of applykey() method if is compiled
        with HB_COMPAT_C53
   *utils/hbdoc/genhtm.prg
    utils/hbdoc/genrtf.prg
    utils/hbdoc/html.prg
    utils/hbdoc/rtf.prg
        *Small changes when the $CLASSDOC$ is used for class documenting
   * source/pp/pragma.c
   * contrib/dot/pp_harb.ch
   * tests/inline_c.prg
     * STOPDUMP renamed as ENDDUMP (with Ron permission)

2001-12-21 08:40 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
    * small fix

2001-12-21 07:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
  * source/rtl/filesys.c
    * hb_fsmkdir,hb_fsChdir,hb_fsRmdir,hb_fsDelete,hb_fsRename,hb_fsCurdirBuff()